cmake_minimum_required(VERSION 3.14)
project(Leetcode)

set(CMAKE_CXX_STANDARD 14)

add_executable(Leetcode main.cpp solution.h 1_twoSum.h 2_addTwoNumbers.h 1021_removeOutermostParentheses.h 2166_designBitset.h
        316removeDuplicateLetters.h 236_lowestCommonAncestor.h 2030_smallestK-LengthSubsequenceWithOccurrencesofaLetter.h 2354_numberOfExcellentPairs.h 2353_designAFoodRatingSystem.h
        2259_removeDigitFromNumbertoMaximizeResult.h 2260_minimumCardPickup.h 2261_countDistinct.h 2262_appealSum.h
        2248_intersection.h 2249_countLatticePoints.h 2250_countRectangles.h 2251_fullBloomFlowers.h
        114_flatten.h 2003_smallestMissingValueSubtree.h 242_isAnagram.h 890_findAndReplacePattern.h 1044_longestDupSubstring.h 916_wordSubsets.h 307_numArray.h)